ported to ros indigo under Ubuntu 14.04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,12 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+find_package(OpenCV REQUIRED)
+
 include_directories(
   include/mirror_objects 
   include/mirror_objects/poisson
+  ${OpenCV_INCLUDE_DIRS}
   )
 
 
@@ -35,13 +38,13 @@ FILE(GLOB poisson_sources src/poisson/*.cpp)
 rosbuild_add_library(poisson ${poisson_sources})
 set_target_properties(poisson PROPERTIES COMPILE_FLAGS " -g -Wno-deprecated")
 rosbuild_add_library(${PROJECT_NAME} ${cc_sources})
-target_link_libraries(${PROJECT_NAME} poisson)
+target_link_libraries(${PROJECT_NAME} poisson ${OpenCV_LIBS})
 
 rosbuild_add_executable(mirrorAndReconstruct src/run_mirror_and_meshing.cpp)
-target_link_libraries(mirrorAndReconstruct ${PROJECT_NAME})
+target_link_libraries(mirrorAndReconstruct ${PROJECT_NAME} ${OpenCV_LIBS})
 
 rosbuild_add_executable(mirrorCloud src/run_mirroring.cpp)
-target_link_libraries(mirrorCloud ${PROJECT_NAME})
+target_link_libraries(mirrorCloud ${PROJECT_NAME} ${OpenCV_LIBS})
 
 rosbuild_add_executable(meshCloud src/run_meshing.cpp)
-target_link_libraries(meshCloud ${PROJECT_NAME})
+target_link_libraries(meshCloud ${PROJECT_NAME} ${OpenCV_LIBS})
